--- a/style.css
+++ b/style.css
@@ -307,7 +307,16 @@ em {
 a:visited {
     text-decoration: none;
 }
-
+.emailImg{
+    width: 50px;
+}
+.emailBtn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+}
 
 
 
@@ -415,7 +424,7 @@ a:visited {
     margin-right: 30px;
     cursor: pointer;
     border-radius: 5px;
-    background-image: url("resources/imgs/menuBtn.png");
+    background-image: url("resources/imgs/menuBtn.svg");
     background-color: transparent;
     transition: background-image 0.3s ease;
     background-size: contain;
@@ -540,6 +549,13 @@ h2 {
     background-color: #7ac2d4;
     border-radius: 10px;
     transition: 1s;
+    height: 70px;
+    width: auto;
+    display: flex;
+    align-items: center;
+}
+.emailBtn div{
+    margin-right: 5px;
 }
 
 .section p,
@@ -600,6 +616,19 @@ li {
     }
 }
 
+@keyframes slideInUp {
+    from {
+
+        opacity: 0;
+        transform: translateY(10%);
+    }
+
+    to {
+        opacity: 1;
+        
+
+    }
+}
 @keyframes slideInRight {
     from {
 
@@ -616,6 +645,9 @@ li {
 
 .slideInLeft {
     animation: slideInLeft 0.5s ease-in forwards;
+}
+.slideInUp {
+    animation: slideInUp 0.5s ease-in forwards;
 }
 
 .slideInRight {
